--- a/app/src/main/res/layout/item_accepted_request.xml
+++ b/app/src/main/res/layout/item_accepted_request.xml
@@ -5,8 +5,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBackHome">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvAcceptedRequestHeader"
@@ -19,27 +18,32 @@
             android:textSize="@dimen/_12sdp"
             app:fontFamily="@font/poppins_medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/linearAcceptedRequest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAcceptedRequestHeader"
-            android:orientation="horizontal"
+            android:layout_marginStart="@dimen/_18sdp"
+            android:layout_marginEnd="@dimen/_18sdp"
+            android:layout_marginBottom="@dimen/_5sdp"
+            android:background="@drawable/back_login_selection_main"
+            android:backgroundTint="@color/colorWhite1A"
             android:gravity="center_vertical"
-            android:paddingBottom="@dimen/_10sdp"
-            android:paddingStart="@dimen/_12sdp"
-            android:paddingEnd="@dimen/_12sdp">
+            android:orientation="horizontal"
+            android:padding="@dimen/_7sdp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvAcceptedRequestHeader">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgAcceptedProfile"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:src="@drawable/place_holder"
-                android:padding="@dimen/_2sdp"/>
+                android:padding="@dimen/_2sdp"
+                android:src="@drawable/place_holder" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -52,48 +56,50 @@
                     android:id="@+id/tvManagerName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="User Name"
-                    app:fontFamily="@font/poppins_medium"
                     android:includeFontPadding="false"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_14ssp"
-                    android:textColor="@color/white" />
+                    app:fontFamily="@font/roboto_regular"
+                    tools:text="User Name" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEventName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:text="Description"
-                    app:fontFamily="@font/poppins_medium"
                     android:includeFontPadding="false"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/_8ssp"
-                    android:textColor="@color/white" />
+                    app:fontFamily="@font/roboto_regular"
+                    tools:text="Description" />
             </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:ignore="RtlCompat"
-                android:text="@string/accepted"
-                android:textSize="@dimen/_10ssp"
-                app:fontFamily="@font/poppins_medium"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:background="@drawable/back_round_black"
+                android:backgroundTint="@color/colorWhite1A"
                 android:includeFontPadding="false"
-                android:textColor="@color/white"
+                android:padding="@dimen/_5sdp"
+                android:text="@string/accepted"
                 android:textAlignment="center"
-                android:paddingTop="@dimen/_3sdp"
-                android:paddingBottom="@dimen/_3sdp"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp"
-                android:background="@drawable/back_border_white"/>
+                android:textColor="@color/colorPink88"
+                android:textSize="@dimen/_10ssp"
+                app:fontFamily="@font/roboto_regular"
+                tools:ignore="RtlCompat" />
         </LinearLayout>
+
         <View
             android:id="@+id/viewAcceptedRequest"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="@dimen/_5sdp"
             android:background="@color/white"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/linearAcceptedRequest"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="gone"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/linearAcceptedRequest" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
