--- a/app/src/main/res/layout/item_view_sent_request.xml
+++ b/app/src/main/res/layout/item_view_sent_request.xml
@@ -7,19 +7,21 @@
         android:id="@+id/linearViewSentRequest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginStart="@dimen/_18sdp"
+        android:layout_marginEnd="@dimen/_18sdp"
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:background="@drawable/back_login_selection_main"
+        android:backgroundTint="@color/colorWhite1A"
         android:gravity="center_vertical"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_12sdp"
-        android:paddingEnd="@dimen/_12sdp"
-        android:background="@color/colorBackHome">
+        android:orientation="horizontal"
+        android:padding="@dimen/_7sdp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imgRequestProfile"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
-            android:src="@drawable/place_holder"
-            android:padding="@dimen/_2sdp"/>
+            android:padding="@dimen/_2sdp"
+            android:src="@drawable/place_holder" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -32,37 +34,38 @@
                 android:id="@+id/tvRequestManagerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="User Name"
-                app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_14ssp"
-                android:textColor="@color/white" />
+                app:fontFamily="@font/roboto_regular"
+                tools:text="User Name" />
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvRequestEventName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="Description"
-                app:fontFamily="@font/poppins_medium"
                 android:includeFontPadding="false"
+                android:textColor="@color/white"
                 android:textSize="@dimen/_8ssp"
-                android:textColor="@color/white" />
+                app:fontFamily="@font/roboto_regular"
+                tools:text="Description" />
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvViewSentRequest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:ignore="RtlCompat"
-            android:text="@string/cancel_request"
-            android:textSize="@dimen/_10ssp"
-            app:fontFamily="@font/poppins_medium"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:background="@drawable/back_round_black"
+            android:backgroundTint="@color/colorWhite1A"
             android:includeFontPadding="false"
-            android:textColor="@color/white"
+            android:padding="@dimen/_5sdp"
+            android:text="@string/cancel_request"
             android:textAlignment="center"
-            android:paddingTop="@dimen/_3sdp"
-            android:paddingBottom="@dimen/_3sdp"
-            android:paddingStart="@dimen/_10sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:background="@drawable/back_border_white"/>
+            android:textColor="@color/colorPink88"
+            android:textSize="@dimen/_10ssp"
+            app:fontFamily="@font/roboto_regular"
+            tools:ignore="RtlCompat" />
     </LinearLayout>
 </layout>
