--- a/app/src/main/res/drawable/back_about_me.xml
+++ b/app/src/main/res/drawable/back_about_me.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="@color/colorBlack32" />
+        android:color="@color/colorWhite33" />
     <corners
-        android:radius="@dimen/_13sdp"/>
+        android:radius="@dimen/_20sdp"/>
 </shape>
