--- a/app/src/main/res/drawable/back_pink_select.xml
+++ b/app/src/main/res/drawable/back_pink_select.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-
     <solid
-        android:color="@color/colorBlack32" />
+        android:color="@color/colorPink88" />
     <corners
-        android:radius="@dimen/_13sdp"/>
+        android:radius="@dimen/_7sdp"/>
 </shape>
