--- a/app/src/main/res/drawable/back_round_black.xml
+++ b/app/src/main/res/drawable/back_round_black.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-
     <solid
-        android:color="@color/colorHintTex" />
+        android:color="@color/colorBlack32" />
     <corners
-        android:radius="@dimen/_6sdp"/>
+        android:radius="@dimen/_7sdp"/>
 </shape>
