--- a/app/src/main/res/layout/fragment_manager_account.xml
+++ b/app/src/main/res/layout/fragment_manager_account.xml
@@ -21,7 +21,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingBottom="@dimen/_65sdp"
+                android:clipToPadding="false">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
