--- a/app/src/main/res/layout/item_event_activities.xml
+++ b/app/src/main/res/layout/item_event_activities.xml
@@ -1,52 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorBackHome"
-    android:paddingBottom="@dimen/_10sdp"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imgActivity"
-        android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:src="@drawable/place_holder"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvActivityUserName"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_10sdp"
-        tools:ignore="RtlCompat"
-        tools:text="Samantha Rose "
-        android:textSize="@dimen/_10ssp"
-        android:fontFamily="@font/poppins_medium"
-        android:textColor="@color/white"
-        android:includeFontPadding="false"/>
+        android:layout_marginBottom="@dimen/_5sdp"
+        android:background="@drawable/back_login_selection_main"
+        android:backgroundTint="@color/colorWhite1A"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:padding="@dimen/_7sdp">
 
-    <!--<androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvActivityDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="requested to follow you "
-        android:textSize="@dimen/_10ssp"
-        android:fontFamily="@font/poppins_light"
-        android:textColor="@color/white"
-        android:includeFontPadding="false"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imgActivity"
+            android:layout_width="@dimen/_40sdp"
+            android:layout_height="@dimen/_40sdp"
+            android:src="@drawable/place_holder" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvActivityUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/roboto_medium"
+            android:includeFontPadding="false"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10ssp"
+            tools:ignore="RtlCompat"
+            tools:text="Samantha Rose " />
+
+        <!--<androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvActivityDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="requested to follow you "
+            android:textSize="@dimen/_10ssp"
+            android:fontFamily="@font/poppins_light"
+            android:textColor="@color/white"
+            android:includeFontPadding="false"/>
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvActivityTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="23h"
-        android:textSize="@dimen/_8ssp"
-        android:fontFamily="@font/poppins_light"
-        android:textColor="@color/colorHintTex"
-        android:includeFontPadding="false"/>-->
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvActivityTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="23h"
+            android:textSize="@dimen/_8ssp"
+            android:fontFamily="@font/poppins_light"
+            android:textColor="@color/colorHintTex"
+            android:includeFontPadding="false"/>-->
 
-</LinearLayout>
+    </LinearLayout>
 </layout>
